# mdserve

./: .gitignore  .release-please-config.json  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  config.yaml
.github/workflows/: release-please.yml  rust.yml
examples/: frontmatter.md  hello.md  index.md
examples/nested/: index.md  otherfile.md
src/: config.rs  main.rs  markdown.rs  server.rs  template.rs  utils.rs
src/handlers/: markdown_handler.rs  mod.rs
src/utils/: etag.rs
templates/: footer.html  header.html  layout.html  markdown.html
