[package]
name = "mdserve"
version = "0.4.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["http2"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
pulldown-cmark = "0.9"
dashmap = "6.1.0"
base64 = "0.21"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"]  }
serde_json = { version="1.0", features = ["preserve_order"] }
chrono = "0.4"
walkdir = "2.3"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }